Probably final pre-release update

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <ul class="projects-list">
               <li>
                 <a href="/portfolio/personal-website" data-section="personal-website">
-                  <span class="icon complete-website"></span>
+                  <span class="icon fullstack"></span>
                   <span class="icon personal"></span>
                   <span class="project-text" data-ru="personal-website">Personal website</span>
                 </a>
@@ -299,7 +299,7 @@
                 <p class="overlay-text" data-ru="personal-website-d"><b>Description:</b> A custom single-page application built with vanilla JavaScript, featuring routing, state management, forms, and validation. Fully responsive with custom UI and UX on both desktop and touch devices. Includes a modern design, smooth animations, an image gallery, and a code viewer. Integrated AI chat powered by GPT with context retention. Backend powered by Node.js with SQLite for storing necessary data, including daily GPT token limits. User identification and limits handled without traditional authentication using UID and fingerprinting. Provides security and usage protection features.</p>
                 <p class="overlay-text" data-ru="supported-lang-1"><b>Supported languages:</b> English, Russian</p>
                 <div class="project-development-dates">
-                  <p class="overlay-text" data-ru="personal-website-date-d"><b>Development:</b> 30 Aug 2025 &mdash; 1 Dec 2025</p>
+                  <p class="overlay-text" data-ru="personal-website-date-d"><b>Development:</b> 30 Aug 2025 &mdash; 2 Dec 2025</p>
                   <p class="overlay-text" data-ru="personal-website-date-s"><b>Support:</b> Ongoing</p>
                 </div>
                 <h3 data-ru="overlay-links-header-s">LINK</h3>
